maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: type Bool
	 def AtteintBord() :Bool = {
                            ^Escaper:13: error: not found: value max
	 	(getX() == 0 || getY() == maxy) || (getY() == 0 || getX() == max)}
                                                                             ^